openapiに合ったレスポンスを返すよう処理を修正
