# openapi/openapi.yaml
@@ -162,7 +162,7 @@ components:
         - required:
           - id
           - emailVerified
-          - creatDate
+          - createDate
 
     NewUser:
       title: NewUser
@@ -170,8 +170,10 @@ components:
       properties:
         firstName:
           type: string
+          minLength: 1
         lastName:
           type: string
+          minLength: 1
         email:
           type: string
           format: email
